*
* 1.2.6
*

- NXSL function PostEvent can use event names instead of event codes
- New NXSL functions: AgentReadParameter, ManageObject, UnmanageObject
- Management console:
	- Network map functionality in web console now in sync with desktop version
	- Alarm details view improved
- 64bit interface counters in Windows agent
- Driver for D-Link switches
- Android Agent:
	- Changed name of configuration parameters (NB needs reconfiguration of agent!!!)
	- New location strategy: relay on updates from other apps or force update (frequency, duration and provider selectable).
	- Show location strategy on home screen.
	- Fixed bug in automatic connection on first start when agent was disabled
	- Override for connection schedule on detecting change of connectivity (selectable)
- New MIBs added: LLDP-EXT-DOT1-MIB, LLDP-EXT-DOT3-MIB
- Fixed issues: #197, #222, #227	


*
* 1.2.5
*

- Topology-based event correlation improved
- Network discovery improved
- Mapping tables
- New NXSL functions: ceil, floor, round, format, map
- Management console:
	- "Alarm Details" view
	- "Area" option implemented on line charts
	- Multiple DCIs can be combined on one graph on "Performance" tab
	- New dashboard element: separator
	- DCIs can be created from MIB Explorer
	- Textual conventions for selected MIB object displayed in MIB explorer
	- Fixed bug with chart titles in dashboards
	- "Snap to grid" and "Align to grid" options in network maps
	- Improved Y-range adjustment in line charts
	- Improved tooltips in line charts
	- Custom logo can be set on login screen in web console
	- Fixed performance and stability issues with image library
- Android client:
	- Select all/unselect all in alarms list
	- Multipliers for graphs and last values: binary (power of two) and decimal (power of ten)
	- Show number of pending alarms in home screen
- API for creating embedded application agents
- Initial (alpha) version of mobile agent for Android devices